# DistillFlow

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README.rst  deploy_gcp.py  deploy_runpod.py  deployment_script.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup_script.sh  startup_script.sh
.github/workflows/: distillflow.yml
config/: deepseek.yaml  layers_distill.yaml  local_distill.yaml  logits_deepspeed.yaml  logits_distill.yaml  logits_distill_mmlu.yaml
config/gsm8k/: deepseek.yaml  logits_distill.yaml
config/infer/: gsm8k.yaml  logits_distill.yaml  mmlu.yaml  wikisql.yaml
config/mmlu/: layers_distill.yaml  logits_distill.yaml
config/wikisql/: logits_distill.yaml
deepspeed/: deepspeed_config.json  zero0.json  zero0_student.json  zero1.json  zero2.json  zero3.json  zero3_teacher.json
distillflow/: __init__.py
distillflow/distill/: distiller.py  sft.py  sft_native.py
distillflow/distill_datasets/: __init__.py  dolly.py
distillflow/evaluation/: rouge.py
distillflow/student/: __init__.py  distillbert.py  qwen.py  sft.py
distillflow/teacher/: __init__.py  anthropic.py  teacher.py
distillflow_env/: pyvenv.cfg
examples/: anthropic_responses.csv  anthropic_sft.py  anthropic_sft_native.py
examples/sft_native_output_test/: README.md  adapter_config.json
examples/sft_output_test/: config.json  model.safetensors  tokenizer.json  tokenizer_config.json
src/: Dockerfile  anthropic_distill.py  anthropic_sft.py  anthropic_sft_native.py  fake_graph.py  infer.py  qwen_distill.py  s3_utils.py  trainer.py
src/distillflow/: DistillFlow.py  __init__.py
src/distillflow/common/: __init__.py  common.py  logger.py
src/distillflow/config/: __init__.py  config.py  validator.py
src/distillflow/datasets/: __init__.py  args.py  dataset.py  dataset_args.py  dolly.py  loader.py
src/distillflow/datasets/template/: alpaca.py  args.py  role.py  sharegpt.py  template.py
src/distillflow/distill/: __init__.py  distiller.py  sft.py  sft_native.py
src/distillflow/distill_datasets/: converter.py  dataset_args.py  loader.py  loader1.py
src/distillflow/distill_datasets/template/: __init__.py  alpaca.py  sharegpt.py
src/distillflow/misc/: __init__.py  misc.py
src/distillflow/model/: adapter.py  args.py  checkpoint.py  finetuning_args.py  generating_args.py  liger_kernel.py  loader.py  model_args.py  patcher.py  quantization.py  tokenizer.py  unsloth.py
src/distillflow/model/model_utils/: attention.py  checkpointing.py  embedding.py  liger_kernel.py  longlora.py  misc.py  mod.py  packing.py  quantization.py  rope.py  unsloth.py  valuehead.py  visual.py
src/distillflow/student/: __init__.py  llama3.py  qwen.py  student.py
src/distillflow/teacher/: anthropic.py
src/distillflow/trainer/: AdaptationLayer.py  __init__.py  args.py  attention_distillation.py  fine_tuning.py  layers_distillation.py  logits_distillation.py  logits_torch.py
src/results/checkpoint-1000/: README.md  adapter_config.json  adapter_model.safetensors  rng_state.pth  scheduler.pt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  trainer_state.json
src/sft_output_test/: config.json  generation_config.json  tokenizer_config.json
src/utils/: combine_adaptor.py  count_tokens.py  formatter.py  metrics.py  parser.py
tests/: loader_test.py  logits_distillation_test.py
tests/datasets/: loader_test.py
tests/trainer/: logits_distillation_test.py
