[tool.poetry]
name = "distillflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "1.0.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.9"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anthropic = "0.35.0"
anyio = "4.6.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
bitsandbytes="0.42.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
datasets = "3.0.1"
dill = "0.3.8"
distro = "1.9.0"
docstring-parser = "0.16"
eval-type-backport = "0.2.0"
evaluate = "0.4.3"
exceptiongroup = "1.2.2"
filelock = "3.16.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httpx = "0.27.2"
huggingface-hub = "0.25.1"
idna = "3.10"
jinja2 = "3.1.4"
jiter = "0.6.0"
markdown-it-py = "3.0.0"
markupsafe = "3.0.0"
mdurl = "0.1.2"
mpmath = "1.3.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
networkx = "3.2.1"
numpy = "<2.0"
packaging = "24.1"
pandas = "2.2.3"
propcache = "0.2.0"
psutil = "6.0.0"
pyarrow = "17.0.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyyaml = "6.0.2"
regex = "2024.9.11"
requests = "2.32.3"
rich = "13.9.2"
safetensors = "0.4.5"
shtab = "1.7.1"
six = "1.16.0"
sniffio = "1.3.1"
sympy = "1.13.3"
tokenizers = "0.20.0"
torch = "2.2.2"
tqdm = "4.66.5"
transformers = "4.45.0"
trl = "0.11.3"
typing-extensions = "4.12.2"
tyro = "0.8.12"
tzdata = "2024.2"
urllib3 = "2.2.3"
xxhash = "3.5.0"
yarl = "1.13.1"
peft = "^0.13.2"
wheel = "^0.44.0"
auto-gptq = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true