[tool.poetry]
name = "Distillflow"
version = "0.1.0"
description = ""
authors = ["Horus Labs <hello@horusailabs.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "3.12.*"
setuptools = "75.6.0"
accelerate = "1.0.0"
annotated-types = "0.7.0"
attrs = "24.2.0"
bitsandbytes="0.42.0"
charset-normalizer = "3.3.2"
datasets = "3.0.1"
evaluate = "0.4.3"
h11 = "0.14.0"
huggingface-hub = "0.25.1"
jiter = "0.6.0"
mpmath = "1.3.0"
numpy = "<2.0"
pandas = "2.2.3"
pyyaml = "6.0.2"
safetensors = "0.4.5"
tokenizers = "0.20.0"
torch = "2.4.0"
tqdm = "4.66.5"
transformers = "4.46.1"
trl = "0.11.3"
peft = "^0.13.2"
auto-gptq = "0.2.0"
runpod = { version = "^1.7.7", markers = "sys_platform == 'linux'" }
unsloth = { version = "^2024.12.4", markers = "sys_platform == 'linux'" }
liger-kernel = { version = "^0.5.2", markers = "sys_platform == 'linux'" }
triton = { version = "3.0.0", markers = "sys_platform == 'linux'" }
flash-attn = { version = "^2.7.2.post1", platform = "linux" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true